@@ -1,4 +1,4 @@
-/*	$NetBSD: smc91cxx.c,v 1.16 1999/03/25 23:20:22 thorpej Exp $	*/
+/*	$NetBSD: smc91cxx.c,v 1.16.2.1 1999/09/16 03:36:59 itojun Exp $	*/
 
 /*-
  * Copyright (c) 1997 The NetBSD Foundation, Inc.
@@ -923,22 +923,40 @@ smc91cxx_read(sc)
 
 	ifp->if_ipackets++;
 
-#if NBPFILTER > 0
-	/*
-	 * Hand the packet off to bpf listeners.  If there's a bpf listener,
-	 * we need to check if the packet is ours.
-	 */
-	if (ifp->if_bpf) {
-		bpf_mtap(ifp->if_bpf, m);
-
-		if ((ifp->if_flags & IFF_PROMISC) &&
-		    (eh->ether_dhost[0] & 1) == 0 &&	/* !mcast and !bcast */
-		    ether_cmp(eh->ether_dhost, LLADDR(ifp->if_sadl))) {
+	if ((ifp->if_flags & IFF_PROMISC) != 0) {
+		/*
+		 * Make sure to behave as IFF_SIMPLEX in all cases.
+		 * Drop multicast/broadcast packet looped back from myself.
+		 *
+		 * This is to cope with SMC91C92 (Megahertz XJ10BT), which
+		 * loops back multicast packet to itself on promiscuous mode.
+		 * (should be ensured by chipset configuration)
+		 */
+		if ((eh->ether_dhost[0] & 1) == 1 &&	/* mcast || bcast */
+		    ether_cmp(eh->ether_shost, LLADDR(ifp->if_sadl)) == 0) {
 			m_freem(m);
 			goto out;
 		}
 	}
+
+#if NBPFILTER > 0
+	/*
+	 * Hand the packet off to bpf listeners.
+	 */
+	if (ifp->if_bpf)
+		bpf_mtap(ifp->if_bpf, m);
 #endif
+
+	if ((ifp->if_flags & IFF_PROMISC) != 0) {
+		/*
+		 * If this is unicast and not for me, drop it.
+		 */
+		if ((eh->ether_dhost[0] & 1) == 0 &&	/* !mcast and !bcast */
+		    ether_cmp(eh->ether_dhost, LLADDR(ifp->if_sadl)) != 0) {
+			m_freem(m);
+			goto out;
+		}
+	}
 
 	/*
 	 * Strip the ethernet header.
